--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/CreateEdit.cshtml
@@ -53,15 +53,15 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SeqNo, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.SeqNo, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.SeqNo, new { @class = "form-control", type="number"})
                                         @Html.ValidationMessageFor(x => x.SeqNo)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.DefaultFlag, new { @class = "form-label" })
                                         <div class="form-check">
                                             @Html.CheckBoxFor(x => x.DefaultFlag, new { @class = "form-check-input" })
-                                            @Html.LabelFor(x => x.DefaultFlag, new { @class = "form-check-label" })
                                         </div>
                                     </div>
                                 </div>
