--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNationalityMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNationalityMaster/CreateEdit.cshtml
@@ -42,12 +42,12 @@
                                         @Html.TextBoxFor(x => x.Description, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.Description)
                                     </div>
-                                    <div class="col-lg-4">
-                                        <div class="mb-3">
-                                            <div class="form-check">
-                                                @Html.CheckBoxFor(x => x.DefaultFlag, new { @class = "form-check-input" })
-                                                @Html.LabelFor(x => x.DefaultFlag, new { @class = "form-check-label" })
-                                            </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.DefaultFlag, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.DefaultFlag, new { @class = "form-check-input" })
                                         </div>
                                     </div>
                                 </div>
