--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_AdminRoleMasterSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_AdminRoleMasterSidePannel.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Coditech.Admin.Utilities;
-@model AdminRoleViewModel
+@model string
 @{
     Layout = null;
 }
@@ -7,15 +7,15 @@
     <div class="card-body">
         <div class="files-nav">
             <div class="nav flex-column nav-pills" id="files-tab" aria-orientation="vertical">
-                <a class="nav-link" href="/adminrolemaster/Edit?adminRoleMasterId=@Model.AdminRoleMasterId" aria-selected="true">
+                <a class="nav-link" href="/adminrolemaster/Edit?adminRoleMasterId=@Model" aria-selected="true">
                     <i class="ti-control-record"></i>
                     <h5 class="m-0">Admin Role Details</h5>
                 </a>
-                <a class="nav-link" href="/adminrolemaster/AllocateAccessRights?adminRoleMasterId=@Model.AdminRoleMasterId" aria-selected="true">
+                <a class="nav-link" href="/adminrolemaster/AllocateAccessRights?adminRoleMasterId=@Model" aria-selected="true">
                     <i class="ti-control-record"></i>
                     <h5 class="m-0">Allocate Access Rights</h5>
                 </a>
-                <a class="nav-link" href="/adminrolemaster/AllocateRoleToUser?adminRoleMasterId=@Model.AdminRoleMasterId" aria-selected="true">
+                <a class="nav-link" href="/adminrolemaster/AllocateRoleToUser?adminRoleMasterId=@Model" aria-selected="true">
                     <i class="ti-control-record"></i>
                     <h5 class="m-0">Allocate Role To User</h5>
                 </a>
