--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
@@ -29,7 +29,10 @@
         </div><!--end row-->
         <!-- end page title end breadcrumb -->
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-2">
+                @Html.Partial("~/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml", Model.OrganisationCentreMasterId.ToString())
+            </div>
+            <div class="col-lg-10">
                 <div class="card">
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
