--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>@ViewData["Title"] - Coditech.Admin</title>
+    <title>@ViewData["Title"] | Admin Application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta content="" name="description">
     <meta content="" name="author">
@@ -29,7 +29,6 @@
     <link href="~/css/layout/icons.min.css" rel="stylesheet" type="text/css"/>
     <link href="~/css/layout/metisMenu.min.css" rel="stylesheet" type="text/css" />
     <link href="~/css/layout/daterangepicker.css" rel="stylesheet" type="text/css" />
-    @* <link href="~/css/layout/bootstrap-datepicker.css" type="stylesheet" /> *@
     <link href="~/css/layout/app.min.css" rel="stylesheet" type="text/css">
     <link href="~/css/layout/datatables.bootstrap5.min.css" rel="stylesheet" type="text/css" />
     <link href="~/css/layout/buttons.bootstrap5.min.css" rel="stylesheet" />
@@ -121,7 +120,6 @@
     <script src="~/js/layout/feather.min.js"></script>
     <script src="~/js/layout/simplebar.min.js"></script>
     <script src="~/js/layout/moment.js"></script>
-    @* <script src="~/js/layout/bootstrap-datepicker.js"></script> *@
     <script src="~/js/layout/daterangepicker.js"></script>
     <script src="~/js/layout/app.js"></script>
     <script src="~/js/layout/bootstrap-select.min.js"></script>
