--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_AdminRoleMasterSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_AdminRoleMasterSidePannel.cshtml
@@ -8,16 +8,13 @@
         <div class="files-nav">
             <div class="nav flex-column nav-pills" id="files-tab" aria-orientation="vertical">
                 <a class="nav-link" href="/adminrolemaster/Edit?adminRoleMasterId=@Model" aria-selected="true">
-                    <i class="ti-control-record"></i>
-                    <h5 class="m-0">Admin Role Details</h5>
+                    <i class="ti-menu"></i><h5 class="m-0 ps-2">Admin Role Details</h5>
                 </a>
                 <a class="nav-link" href="/adminrolemaster/AllocateAccessRights?adminRoleMasterId=@Model" aria-selected="true">
-                    <i class="ti-control-record"></i>
-                    <h5 class="m-0">Allocate Access Rights</h5>
+                    <i class="ti-key"></i><h5 class="m-0 ps-2">Allocate Access Rights</h5>
                 </a>
                 <a class="nav-link" href="/adminrolemaster/AllocateRoleToUser?adminRoleMasterId=@Model" aria-selected="true">
-                    <i class="ti-control-record"></i>
-                    <h5 class="m-0">Allocate Role To User</h5>
+                    <i class="ti-user"></i><h5 class="m-0 ps-2">Allocate Role To User</h5>
                 </a>
             </div>
         </div>
