--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Control/_DropdownList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Control/_DropdownList.cshtml
@@ -3,4 +3,11 @@
 @{
     CoditechDropdownHelper.GeneralDropdownList(Model);
 }
-@Html.DropDownList(Model.DropdownName, Model.DropdownList, new { @class = "form-control", @onchange = Model.ChangeEvent })
+@if (Model.IsDisabled)
+{
+    @Html.DropDownList(Model.DropdownName, Model.DropdownList, new { @class = "form-control", @onchange = Model.ChangeEvent, @disabled = "disabled" })
+}
+else
+{
+    @Html.DropDownList(Model.DropdownName, Model.DropdownList, new { @class = "form-control", @onchange = Model.ChangeEvent })
+}
