--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableTrueFalse.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableTrueFalse.cshtml
@@ -1,9 +1,13 @@
 ﻿@model bool
 @if (Model)
 {
-    <i class="fas fa-check-circle"></i>
+    <div class="btn btn-sm btn-soft-primary me-2 btn-circle">
+        <i class="fas fa-check-circle"></i>
+    </div>
 }
 else
 {
-    <i class="fas fa-times-circle"></i>
+    <div class="btn btn-sm btn-soft-primary me-2 btn-circle">
+        <i class="fas fa-times-circle"></i>
+    </div>
 }
