--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrePrintingFormat.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrePrintingFormat.cshtml
@@ -36,7 +36,7 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.CentreName, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.CentreName, new { @class = "form-label " })
 
                                         @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control",@disabled = "disabled"})
                                         @Html.ValidationMessageFor(x => x.CentreName)
@@ -44,17 +44,17 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.OrganisationCentreMasterId, new { @class = "form-label required" })
 
-                                        @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control",@disabled = "disabled"})
-                                        @Html.ValidationMessageFor(x => x.CentreCode)
+                                        @Html.TextBoxFor(x => x.OrganisationCentreMasterId, new { @class = "form-control",@disabled = "disabled"})
+                                        @Html.ValidationMessageFor(x => x.OrganisationCentreMasterId)
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PrintingLine1, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.PrintingLine1, new { @class = "form-label" })
 
                                         @Html.TextAreaFor(x => x.PrintingLine1, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.PrintingLine1)
@@ -62,7 +62,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PrintingLine2, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.PrintingLine2, new { @class = "form-label" })
 
                                         @Html.TextAreaFor(x => x.PrintingLine2, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.PrintingLine2)
@@ -72,7 +72,7 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PrintingLine3, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.PrintingLine3, new { @class = "form-label" })
 
                                         @Html.TextAreaFor(x => x.PrintingLine3, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.PrintingLine3)
@@ -80,7 +80,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PrintingLine4, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.PrintingLine4, new { @class = "form-label" })
 
                                         @Html.TextAreaFor(x => x.PrintingLine4, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.PrintingLine4)
@@ -90,7 +90,7 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.Logo, new { @class = "col-md-3 label-control required" })
+                                        @Html.LabelFor(x => x.Logo, new { @class = "col-md-3 label-control " })
                                         <input type="File" / id="LogoFilename" name="LogoFilename">
                                         <button type="submit" class="btn btn-success"><i class="la la-check-square-o"></i>@GeneralResources.SaveButton</button>
                                     </div>
