--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrePrintingFormat.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrePrintingFormat.cshtml
@@ -33,21 +33,21 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.OrganisationCentrePrintingFormatId)
+                            @Html.HiddenFor(m => m.OrganisationCentreMasterId)
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CentreName, new { @class = "form-label " })
 
-                                        @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control",@disabled = "disabled"})
+                                        @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control", @disabled = "disabled" })
                                         @Html.ValidationMessageFor(x => x.CentreName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.OrganisationCentreMasterId, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
 
-                                        @Html.TextBoxFor(x => x.OrganisationCentreMasterId, new { @class = "form-control",@disabled = "disabled"})
-                                        @Html.ValidationMessageFor(x => x.OrganisationCentreMasterId)
+                                        @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control", @disabled = "disabled" })
                                     </div>
                                 </div>
                             </div>
@@ -56,7 +56,7 @@
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PrintingLine1, new { @class = "form-label" })
 
-                                        @Html.TextAreaFor(x => x.PrintingLine1, new { @class = "form-control"})
+                                        @Html.TextAreaFor(x => x.PrintingLine1, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PrintingLine1)
                                     </div>
                                 </div>
@@ -64,7 +64,7 @@
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PrintingLine2, new { @class = "form-label" })
 
-                                        @Html.TextAreaFor(x => x.PrintingLine2, new { @class = "form-control"})
+                                        @Html.TextAreaFor(x => x.PrintingLine2, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PrintingLine2)
                                     </div>
                                 </div>
@@ -74,7 +74,7 @@
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PrintingLine3, new { @class = "form-label" })
 
-                                        @Html.TextAreaFor(x => x.PrintingLine3, new { @class = "form-control"})
+                                        @Html.TextAreaFor(x => x.PrintingLine3, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PrintingLine3)
                                     </div>
                                 </div>
@@ -82,7 +82,7 @@
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PrintingLine4, new { @class = "form-label" })
 
-                                        @Html.TextAreaFor(x => x.PrintingLine4, new { @class = "form-control"})
+                                        @Html.TextAreaFor(x => x.PrintingLine4, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PrintingLine4)
                                     </div>
                                 </div>
@@ -91,14 +91,12 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Logo, new { @class = "col-md-3 label-control " })
-                                        <input type="File" / id="LogoFilename" name="LogoFilename">
-                                        <button type="submit" class="btn btn-success"><i class="la la-check-square-o"></i>@GeneralResources.SaveButton</button>
+                                        <input type="File" id="LogoFilename" name="LogoFilename">
                                     </div>
                                 </div>
                             </div>
-                            @* <div class="form-actions text-right">
-                        <button type="submit" class="btn btn-success"><i class="la la-check-square-o"></i>@GeneralResources.SaveButton</button>
-                        </div> *@
+                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
