--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_CreateEditGeneralPerson.cshtml
@@ -41,6 +41,12 @@
                             @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
                         </div>
                     </div>
+                    <div class="col-lg-3">
+                        <div class="mb-3">
+                            @Html.LabelFor(x => x.GenderEnumId, new { @class = "form-label" })
+                            @Html.DropDownListFor(m => m.GenderEnumId, new SelectList(Model.GenderlList, "Value", "Text"), new { @class = "form-control" })
+                        </div>
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                 <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
