--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/CreateEdit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Coditech.Admin.Utilities;
-@model GymMemberDetailsViewModel
+@model GymCreateEditMemberViewModel
 @{
     ViewBag.Title = Model.GymMemberDetailId > 0 ? "Update Member" : "Create Member";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
@@ -37,9 +37,60 @@
             }
             else
             {
-                @Html.Partial("~/Views/Shared/_CreateEditGeneralPerson.cshtml", Model.GeneralPersonViewModel);
+                @Html.Partial("~/Views/Shared/_CreateEditGeneralPerson.cshtml", Model);
             }
         </div>
     </div>
 </div>
 
+@section scripts {
+    <script>
+        $(function () {
+            $('#DateOfBirth').daterangepicker({
+                singleDatePicker: true,
+                showDropdowns: true,
+                showWeekNumbers: false,
+                drops: "auto",
+                opens: "right",
+                autoApply: false,
+                "locale": {
+                    "format": "DD/MM/YYYY",
+                    "separator": " - ",
+                    "applyLabel": "Apply",
+                    "cancelLabel": "Cancel",
+                    "fromLabel": "From",
+                    "toLabel": "To",
+                    "customRangeLabel": "Custom",
+                    "weekLabel": "W",
+                    "daysOfWeek": [
+                        "Su",
+                        "Mo",
+                        "Tu",
+                        "We",
+                        "Th",
+                        "Fr",
+                        "Sa"
+                    ],
+                    "monthNames": [
+                        "January",
+                        "February",
+                        "March",
+                        "April",
+                        "May",
+                        "June",
+                        "July",
+                        "August",
+                        "September",
+                        "October",
+                        "November",
+                        "December"
+                    ],
+                    "firstDay": 1
+                },
+                minYear: 1901,
+                maxYear: parseInt(moment().format('YYYY'), 10)
+            },
+                function (start, end, label) { });
+        });
+    </script>
+}
