Code correction in GeneralSystemGlobleSetting

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralSystemGlobleSettingMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralSystemGlobleSettingMaster/_List.cshtml
@@ -19,6 +19,7 @@
                     {
                         <tr>
                             <td>@item.FeatureName</td>
+                            <td>@item.FeatureDefaultValue</td>
                             <td>@item.FeatureValue</td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?generalSystemGlobleSettingId=@item.GeneralSystemGlobleSettingMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
