--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralSystemGlobleSettingMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralSystemGlobleSettingMaster/CreateEdit.cshtml
@@ -34,7 +34,6 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.GeneralSystemGlobleSettingMasterId)
-                            @Html.HiddenFor(m => m.FeatureDefaultValue)
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
@@ -46,7 +45,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FeatureDefaultValue, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.FeatureDefaultValue, new { @class = "form-check-input" })
+                                        @Html.TextBoxFor(x => x.FeatureDefaultValue, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.FeatureDefaultValue)
                                     </div>
                                 </div>
