--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/List.cshtml
@@ -1,5 +1,4 @@
-﻿@using Coditech.Admin.Utilities;
-@model AdminRoleListViewModel
+﻿@model AdminRoleListViewModel
 @{
     ViewBag.Title = "Admin Role List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
