--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/Create.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using Coditech.Admin.Utilities;
-@model AdminSanctionPostViewModel
+﻿@model AdminSanctionPostViewModel
 @{
     ViewBag.Title = "Add Admin Sanction Post";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
