--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/List.cshtml
@@ -1,5 +1,4 @@
-﻿@using Coditech.Admin.Utilities;
-@model AdminSanctionPostListViewModel
+﻿@model AdminSanctionPostListViewModel
 @{
     ViewBag.Title = "Admin Sanction Post List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
