--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCityMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCityMaster/CreateEdit.cshtml
@@ -1,5 +1,4 @@
-﻿@using Coditech.Admin.Utilities;
-@model GeneralCityViewModel
+﻿@model GeneralCityViewModel
 @{
     ViewBag.Title = Model.GeneralCityMasterId > 0 ? "Update City" : "Add City";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
