--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
@@ -1,5 +1,4 @@
-﻿@using Coditech.Admin.Utilities;
-@model OrganisationCentreViewModel
+﻿@model OrganisationCentreViewModel
 @{
     ViewBag.Title = Model.OrganisationCentreMasterId > 0 ? "Update Organisation Centre" : "Add Organisation Centre";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
