--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrePrintingFormat.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrePrintingFormat.cshtml
@@ -1,7 +1,4 @@
-﻿@using Coditech.Admin.Utilities;
-@using Coditech.Resources;
-@using Coditech.ViewModel;
-@model OrganisationCentrePrintingFormatViewModel
+﻿@model OrganisationCentrePrintingFormatViewModel
 @{
     ViewBag.Title = "Organisation Centre Printing Format";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
