--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseGSTCredential.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseGSTCredential.cshtml
@@ -1,7 +1,4 @@
-﻿@using Coditech.Admin.Utilities;
-@using Coditech.Resources;
-@using Coditech.ViewModel;
-@model OrganisationCentrewiseGSTCredentialViewModel
+﻿@model OrganisationCentrewiseGSTCredentialViewModel
 @{
     ViewBag.Title = "Organisation Centrewise GST Credential";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
