--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
@@ -1,6 +1,4 @@
-﻿@using Coditech.Admin.Utilities;
-@using Coditech.Resources;
-@model OrganisationMasterViewModel
+﻿@model OrganisationMasterViewModel
 @{
     ViewBag.Title = "Organisation";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
