--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Control/_DropdownList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Control/_DropdownList.cshtml
@@ -1,4 +1,4 @@
-﻿@using Coditech.Admin.Helpers;
+﻿@using Coditech.Admin.Helpers
 @model DropdownViewModel
 @{
     CoditechDropdownHelper.GeneralDropdownList(Model);
