--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_CreateEditGeneralPerson.cshtml
@@ -1,5 +1,4 @@
-﻿@using Coditech.Admin.Utilities;
-@model GeneralPersonViewModel
+﻿@model GeneralPersonViewModel
 @{
     Layout = null;
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
