--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/_List.cshtml
@@ -23,7 +23,7 @@
                             <td>@item.NoOfPost</td>
                             <td>@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?adminSanctionPostId=@item.AdminSanctionPostId" title="Update"><i class="fas fa-edit"></i></a>
+                                <a href="../@controllerName/Edit?adminSanctionPostId=@item.AdminSanctionPostId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                             </td>
                         </tr>
                     }
