--- a/Coditech.Project/Admin/Coditech.Admin/Views/_ViewImports.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Coditech.Resources
 @using System.Web
 @using Coditech.Admin.ViewModel
+@using Coditech.Common.Helper.Utilities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
